--- a/resources/assets/sass/credo_scss/bootstrap/bootstrap.scss
+++ b/resources/assets/sass/credo_scss/bootstrap/bootstrap.scss
@@ -1,5 +1,3 @@
-
-
 @import "functions";
 @import "variables";
 @import "mixins";
@@ -11,8 +9,8 @@
 @import "grid";
 /*@import "tables";*/
 @import "forms";
-/*@import "buttons";
-@import "transitions";
+@import "buttons";
+/*@import "transitions";
 @import "dropdown";*/
 /*@import "button-group";
 @import "input-group";*/
@@ -27,7 +25,7 @@
 /*@import "alert";*/
 /*@import "progress";*/
 @import "media";
-/*@import "list-group";*/
+@import "list-group";
 /*@import "close";
 @import "toasts";*/
 /*@import "modal";*/
