--- a/resources/assets/sass/Secciones_y_Helpers/Helper_AJUSTES_Y_MIXIN_GENERALES.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_AJUSTES_Y_MIXIN_GENERALES.scss
@@ -1,44 +1,76 @@
 /* M i x i n s   y   r e c e t s */
-@mixin Parrafo_Style()
-{
-  font-size:16px !important;
-  letter-spacing:1.2px;  
+@mixin Parrafo_Style() {
+  font-size: 16px !important;
+  letter-spacing: 1.2px;
   line-height: 1.7;
-  font-family:$font-primary;
+  font-family: $font-primary;
 }
 
-@mixin H1_Titulo_Style()
-{
-  font-size:48px !important;
-  letter-spacing:1px;
-  font-weight:bold;
+@mixin H1_Titulo_Style() {
+  font-size: 48px !important;
+  letter-spacing: 1px;
+  font-weight: bold;
   line-height: 1;
-  font-family:$font-primary;
+  font-family: $font-primary;
 }
 
-
-
-@mixin Parrafo_Titulo_Style()
-{
-  font-size:26px !important;
+@mixin Parrafo_Titulo_Style() {
+  font-size: 26px !important;
   letter-spacing: 0.5px;
   line-height: 1.3;
-  font-family:$font-primary;
+  font-family: $font-primary;
 }
 
-
-
-
-p{
- @include Parrafo_Style;
+p {
+  @include Parrafo_Style;
 }
 
-
- a{
+a {
   color: $color-3;
   font-weight: bold;
- }
+}
 
- a:hover{
+a:hover {
   color: $color-2;
- }
+}
+
+ul > li::marker {
+  color: $color-3;
+  font-size: 1em;
+}
+
+/* C L A S E S   D E   L I S T A S  */
+.lista-class {
+  width: 100%;
+  margin-top: 4px;
+  font-size: 14px;
+  letter-spacing: 1.4px;
+  padding-left: 20px;
+  line-height: 1.7;
+  font-family: $font-secondary;
+}
+
+.lista-class::before {
+  content: "\025cf";
+  color: $color-3;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
+
+.lista-icono {
+}
+
+.lista-icono::before {
+  content: "\025cf";
+  color: $color-3;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
+
+.list-style-none {
+  list-style: none;
+}
