--- a/resources/assets/sass/credo_scss/bootstrap/_type.scss
+++ b/resources/assets/sass/credo_scss/bootstrap/_type.scss
@@ -18,7 +18,7 @@ h6,
 .h6 {
   margin-bottom: $headings-margin-bottom;
   font-family: $headings-font-family;
-  font-weight: $font-primary;
+  font-weight: $headings-font-weight;
   line-height: $headings-line-height;
   color: $headings-color;
 }
