--- a/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
@@ -82,7 +82,8 @@
   color: $color-3-primary_hover;
 }
 
-.helper_cursor_pointer {
+.helper_cursor_pointer,
+.cursor-pointer {
   cursor: pointer;
 }
 
