--- a/resources/assets/sass/Secciones_y_Helpers/Helper_Inputs_Estilos.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_Inputs_Estilos.scss
@@ -1,46 +1,96 @@
-@mixin InputGeneral()
-{   
+@mixin InputGeneral() {
   line-height: 1.7;
-  font-family: $font-secondary;
+  font-family: $font-primary;
   font-weight: bold;
   font-size: 16px !important;
   background-color: transparent;
-  border: solid  3px transparent;  
+  border: solid 1px $color-3;
   padding: 8px;
-  border-radius:0px;
+  border-radius: 4px;
   width: 100%;
-  border-radius:$Border-radius;
+  border-radius: $Border-radius;
 }
 
-
-.input-text-class-primary{
+.input-text-class-primary {
   @include InputGeneral;
   border-bottom-color: $color-3;
-  color:$color-3;
+  color: $color-3;
 }
 
-   .input-text-class-primary::placeholder{
-        color: lighten( $color-3, 20% );
-    }
-    .input-text-class-primary:focus {    
-      box-shadow: none !important;
-      outline: 0 none !important;
-      border-color:$color-3;
-    }
+.input-text-class-primary::placeholder {
+  color: lighten($color-3, 20%);
+}
+.input-text-class-primary:focus {
+  box-shadow: none !important;
+  outline: 0 none !important;
+  border-color: $color-3;
+}
 
-.input-text-class-white{
+.input-text-class-white {
   @include InputGeneral;
-  border-bottom-color:$color-white;
-  color:$color-white;
+  border-bottom-color: $color-white;
+  color: $color-white;
 }
 
+.input-text-class-white::placeholder {
+  color: darken($color-white, 20%);
+}
 
-    .input-text-class-white::placeholder{
-      color:darken( $color-white, 20% );
-    }
+.input-text-class-white:focus {
+  box-shadow: none !important;
+  outline: 0 none !important;
+  border-color: $color-white;
+}
 
-    .input-text-class-white:focus {    
-      box-shadow: none !important;
-      outline: 0 none !important;
-      border-color:$color-white;
+/*  F o r m a t o    f  l o t a n t e */
+
+.float-label {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  width: 100%;
+  margin-bottom: 10px;
+  height: 3.5em;
+  box-sizing: border-box;
+  box-shadow: none;
+  position: relative;
+  label {
+    z-index: 0;
+    width: 100%;
+    height: 0;
+    left: 0px;
+    top: 0px;
+    position: absolute;
+    top: 15px;
+    left: 8px;
+    font-weight: 500;
+    color: lighten($color-gris-text, 10%);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    transition: all 0.2s ease-in-out;
+  }
+  input,
+  select,
+  textarea {
+    z-index: 0;
+    height: 3.5em;
+    font-weight: bold;
+
+    &:valid,
+    &:focus {
+      padding: 20px 8px 5px 8px;
+      outline: 0;
     }
+    &:focus {
+      background: rgba(255, 255, 255, 1);
+    }
+    &:valid + label,
+    &:focus + label {
+      color: $color-3;
+      font-size: 10px;
+      -webkit-transform: translate3d(0, -10px, 0);
+      transform: translate3d(0, -10px, 0) !important;
+      z-index: 1;
+    }
+  }
+}
