--- a/resources/assets/sass/Secciones_y_Helpers/Helper_botones.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_botones.scss
@@ -1,23 +1,19 @@
-
 /*---  B O T Ó N E S  d e   M A U R I  ---*/
-@mixin Boton-Normal($bk: $color-3, $color:white )
-{
+@mixin Boton-Normal($bk: $color-3, $color: white) {
   background-color: $bk;
-  color:$color ;
+  color: $color;
   padding: 10px 14px;
   font-size: 20px;
   border: solid 1px transparent;
   border-radius: 4px;
   margin: 15px auto;
   display: table;
-  cursor:pointer;
+  cursor: pointer;
 }
 
-
-@mixin Boton-Chico($bk: $color-3, $color:white )
-{
+@mixin Boton-Chico($bk: $color-3, $color: white) {
   background-color: $bk;
-  color:$color ;
+  color: $color;
   padding: 4px 8px;
   font-size: 12px;
   font-family: arial;
@@ -25,98 +21,85 @@
   border-radius: 4px;
   margin: 15px auto;
   display: table;
-  cursor:pointer;  
+  cursor: pointer;
 }
 
-@mixin Boton-base()
-{
+@mixin Boton-base() {
   padding: 10px 14px;
-  
+
   border: solid 1px transparent;
   border-radius: $Border-radius;
-  width:100%;
-  cursor:pointer;
+  width: 100%;
+  cursor: pointer;
   letter-spacing: 1.4px;
   text-align: center;
   display: block;
-  font-family:$font-secondary;
-  
+  font-family: $font-primary;
 }
 
-
 /* B O T O N E S */
-.Boton-Fuente-Chica{
+.Boton-Fuente-Chica {
   font-size: 14px;
 }
 
-.Boton-Fuente-Grande{
+.Boton-Fuente-Grande {
   font-size: 20px;
 }
 
-
-.Boton-Primario-Relleno{
+.Boton-Primario-Relleno {
   @include Boton-base;
-  color:$color-white;
+  color: $color-white;
   background-color: $color-3;
-  border-color:darken( $color-3, 10% );
+  border-color: darken($color-3, 10%);
 }
-.Boton-Primario-Relleno:hover{
-  background-color: lighten( $color-3, 10% );
-  color:$color-white;
+.Boton-Primario-Relleno:hover {
+  background-color: lighten($color-3, 10%);
+  color: $color-white;
 }
 
-.Boton-Primario-Sin-Relleno{
+.Boton-Primario-Sin-Relleno {
   @include Boton-base;
-  color:$color-3;
+  color: $color-3;
   background-color: transparent;
-  border-color:$color-3;
+  border-color: $color-3;
 }
-.Boton-Primario-Sin-Relleno:hover{
+.Boton-Primario-Sin-Relleno:hover {
   background-color: $color-3;
-  color:$color-white;
+  color: $color-white;
 }
 
-.Boton-Primario-Sin-Relleno-Ni-Borde{
+.Boton-Primario-Sin-Relleno-Ni-Borde {
   @include Boton-base;
-  color:$color-3;
+  color: $color-3;
   background-color: transparent;
-  border-color:transparent;
+  border-color: transparent;
 }
-.Boton-Primario-Sin-Relleno-Ni-Borde:hover{
+.Boton-Primario-Sin-Relleno-Ni-Borde:hover {
   background-color: $color-3;
-  color:$color-white;
+  color: $color-white;
 }
 
-.Boton-Blanco{
+.Boton-Blanco {
   @include Boton-base;
-  color:$color-white;
+  color: $color-white;
   background-color: transparent;
-  border-color:$color-white;
+  border-color: $color-white;
 }
-.Boton-Blanco:hover{
-  background-color:  lighten( $color-3, 10% );
-  border-color:darken( $color-3, 10% );
-  color:$color-white;
+.Boton-Blanco:hover {
+  background-color: lighten($color-3, 10%);
+  border-color: darken($color-3, 10%);
+  color: $color-white;
 }
 
-.Boton-Disable{
+.Boton-Disable {
   cursor: not-allowed;
 }
 
-
-
-
-
-@media (min-width: $BrackPoint-Secundario){
-
-.Boton-Fuente-Chica{
-  font-size: 18px;
+@media (min-width: $BrackPoint-Secundario) {
+  .Boton-Fuente-Chica {
+    font-size: 18px;
+  }
+  .Boton-Fuente-Grande {
+    font-size: 28px;
+  }
 }
-.Boton-Fuente-Grande{
-  font-size: 28px;
-}
-
-
-
-
-}  
