--- a/resources/assets/sass/Secciones_y_Helpers/Helper_transitions_vue.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_transitions_vue.scss
@@ -1,3 +1,79 @@
+.modal-mask {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: table;
+  transition: opacity 0.3s ease;
+}
+
+.modal-wrapper {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.modal-container {
+  width: 90vw;
+  margin: 0px auto;
+  max-height: 90vh;
+  padding: 30px 20px;
+  background-color: #fff;
+  border-radius: 2px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
+  transition: all 0.3s ease;
+  font-family: Helvetica, Arial, sans-serif;
+  overflow-y: scroll;
+}
+
+@media (min-width: $BrackPoint-Secundario) {
+  .modal-container {
+    width: 600px;
+    padding: 30px 30px;
+  }
+}
+
+.modal-cerrar-icono {
+  position: absolute;
+  top: 2%;
+  right: 2%;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.modal-body {
+  margin: 20px 0;
+}
+
+.modal-default-button {
+  float: right;
+}
+
+/*
+ * The following styles are auto-applied to elements with
+ * transition="modal" when their visibility is toggled
+ * by Vue.js.
+ *
+ * You can easily play with the modal transition by editing
+ * these styles.
+ */
+
+.modal-enter {
+  opacity: 0;
+}
+
+.modal-leave-active {
+  opacity: 0;
+}
+
+.modal-enter .modal-container,
+.modal-leave-active .modal-container {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
 /*bounce*/
 .bounce-enter-active {
   animation: bounce-in 0.5s;
