--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_precios_nueva.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_precios_nueva.scss
@@ -29,9 +29,10 @@
 }
 
 .contiene-li-precio-nuevo {
-  margin-bottom: 5px;
+  margin-bottom: 8px;
   padding: 0px 5px;
   line-height: 1.4;
+  font-size: 14px;
 }
 
 .contiene-precios-precios {
