--- a/resources/assets/sass/Secciones_y_Helpers/Helper_AJUSTES_Y_MIXIN_GENERALES.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_AJUSTES_Y_MIXIN_GENERALES.scss
@@ -78,3 +78,14 @@ li::marker {
 .list-style-none {
   list-style: none;
 }
+
+.site-section {
+  padding: 2.5em 0;
+  @include media-breakpoint-up(md) {
+    padding: 7em 0;
+  }
+
+  &.site-section-sm {
+    padding: 4em 0;
+  }
+}
