--- a/resources/assets/sass/credo_scss/style.scss
+++ b/resources/assets/sass/credo_scss/style.scss
@@ -1,16 +1,11 @@
 @import "resources/assets/sass/Secciones_y_Helpers/Helper_colores_y_fuentes";
 @import "bootstrap/bootstrap";
 
-/*@import "css/jquery-ui";
-@import "css/owl.carousel.min";
-@import "css/owl.theme.default.min";
-@import "css/fancy";
-@import "css/bootstrap-datepicker";  
-@import "css/aos"; */
-
 @import "bootstrap/functions";
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
+
+@import "site-blocks";
 
 @import "resources/assets/sass/Secciones_y_Helpers/Secciones_helpers___mixer";
 /* @import "resources/assets/sass/plugins/Plug-Code-Hihgtligth";  */
